Moving while checking classes functioning

--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
 </head>
 
 <body>
-<!-- give each square a column class and a row class, eg c1 r1, and when people want to move check that either of the classes match to make it a valid move -->
+<!-- The id is the location - 1st number is column, 2nd number is row. Do charAt() to compare rows and columns-->
     <section class="game-grid">
-        <div class="square c1 r1" id="loc-01">a</div>
-        <div class="square c2 r1" id="loc-02">b</div>
-        <div class="square c3 r1" id="loc-03">c</div>
-        <div class="square c4 r1" id="loc-04">d</div>
-        <div class="square c5 r1" id="loc-05">e</div>
-        <div class="square c1 r2" id="loc-06">f</div>
-        <div class="square c2 r2" id="loc-07">g</div>
-        <div class="square c3 r2" id="loc-08">h</div>
-        <div class="square c4 r2" id="loc-09">i</div>
-        <div class="square c5 r2" id="loc-10">j</div>
-        <div class="square c1 r3" id="loc-11">k</div>
-        <div class="square c2 r3" id="loc-12">l</div>
-        <div class="square c3 r3" id="loc-13">m</div>
-        <div class="square c4 r3" id="loc-14">n</div>
-        <div class="square c5 r3" id="loc-15">o</div>
-        <div class="square c1 r4" id="loc-16">p</div>
-        <div class="square c2 r4" id="loc-17">q</div>
-        <div class="square c3 r4" id="loc-18">r</div>
-        <div class="square c4 r4" id="loc-19">s</div>
-        <div class="square c5 r4" id="loc-20">t</div>
-        <div class="square c1 r5" id="loc-21">u</div>
-        <div class="square c2 r5" id="loc-22">v</div>
-        <div class="square c3 r5" id="loc-23">w</div>
-        <div class="square c4 r5" id="loc-24">x</div>
-        <div class="square c5 r5" id="loc-25">y</div>
+        <div class="square" id="11">a</div>
+        <div class="square" id="21">b</div>
+        <div class="square" id="31">c</div>
+        <div class="square" id="41">d</div>
+        <div class="square" id="51">e</div>
+        <div class="square" id="12">f</div>
+        <div class="square" id="22">g</div>
+        <div class="square" id="32">h</div>
+        <div class="square" id="42">i</div>
+        <div class="square" id="52">j</div>
+        <div class="square" id="13">k</div>
+        <div class="square" id="23">l</div>
+        <div class="square" id="33">m</div>
+        <div class="square" id="43">n</div>
+        <div class="square" id="53">o</div>
+        <div class="square" id="14">p</div>
+        <div class="square" id="24">q</div>
+        <div class="square" id="34">r</div>
+        <div class="square" id="44">s</div>
+        <div class="square" id="54">t</div>
+        <div class="square" id="15"><img id="avaIcon" src="assets/images/avatar.png"></img></div>
+        <div class="square" id="25">v</div>
+        <div class="square" id="35">w</div>
+        <div class="square" id="45">x</div>
+        <div class="square" id="55">y</div>
     </section>
 
 </body>
