--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <div class="square" id="41">d</div>
         <div class="square" id="51">e</div>
         <div class="square" id="12">f</div>
-        <div class="square" id="22">g</div>
+        <div class="square monster" id="22">g</div>
         <div class="square" id="32">h</div>
         <div class="square" id="42">i</div>
         <div class="square" id="52">j</div>
         <div class="square" id="13">k</div>
-        <div class="square" id="23">l</div>
+        <div class="square monster leftWall" id="23">l</div>
         <div class="square" id="33">m</div>
         <div class="square" id="43">n</div>
         <div class="square" id="53">o</div>
-        <div class="square" id="14">p</div>
+        <div class="square topWall baluga" id="14">p</div>
         <div class="square" id="24">q</div>
         <div class="square" id="34">r</div>
         <div class="square" id="44">s</div>
