--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
  
   <title>Dungeon Dash</title>
 </head>
